--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 
 # Site Settings
 locale                   : "en"
-title                    : "Site Title"
+title                    : 
 title_separator          : "-"
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "Nico Dejito"
+description              : "It works!!"
 url                      : "https://ncdejito.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
