--- a/_config.yml
+++ b/_config.yml
@@ -77,10 +77,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  name             : "Nico Dejito"
+  avatar           : "/images/what.PNG"
+  bio              : "It works!!"
+  location         : "Makati, Philippines"
   email            :
   uri              :
   bitbucket        :
