--- a/_config.yml
+++ b/_config.yml
@@ -77,10 +77,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Nico Dejito"
-  avatar           : "/images/what.PNG"
-  bio              : "It works!!"
-  location         : "Makati, Philippines"
+  name             : "Cholo Dejito"
+  avatar           : "/images/why.JPG"
+  bio              : "Let's do it!!"
+  location         : "BGC, Philippines"
   email            :
   uri              :
   bitbucket        :
