--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ analytics:
 # Site Author
 author:
   name             : "Cholo Dejito"
-  avatar           : "/images/why.JPG"
+  avatar           : "/images/why.jpg"
   bio              : "Let's do it!!"
   location         : "BGC, Philippines"
   email            :
