Add link to projects

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,10 +2,10 @@
 main:
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  - title: "About"
+  - title: "Projects"
+    url: https://github.com/ncdejito?tab=repositories
+  - title: "CV"
     url: https://www.linkedin.com/in/niccolo-dejito-99060365/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
   # - title: "Sitemap"
